fix: remove commons-collections 3.x gadget classes from classpath
Replace all commons-beanutils call sites with Spring BeanUtils,
BeanWrapper, and java.beans.Introspector equivalents. Remove the
commons-beanutils dependency entirely and exclude commons-collections
3.2.2 from its remaining transitive sources (commons-validator,
jasperreports, artemis).

This eliminates all deserialization gadget classes (InvokerTransformer,
ChainedTransformer, LazyMap, etc.) from the production classpath.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>